Phase 6: Core Foundation Types (#76)
* docs: start milestone v0.5.0 Java API Surface

* docs: complete project research

* docs: define milestone v0.5.0 requirements

* docs: create milestone v0.5.0 roadmap (5 phases)

* docs(06): capture phase context

* docs(state): record phase 6 context session

* docs(phase-06): research core foundation types domain

* docs(phase-6): add validation strategy

* docs(06): create phase plan for core foundation types

* docs(state): record phase 6 planning session

* feat(06-01): add Gson/SnakeYAML dependencies and create JsonUtil

- Add Gson 2.13.2 and SnakeYAML 2.6 to core build.gradle.kts
- Create package-private JsonUtil with shared Gson instance using LOWER_CASE_WITH_UNDERSCORES
- Fix Java toolchain: use sourceCompatibility/targetCompatibility instead of strict toolchain for JDK portability

* test(06-01): add failing tests for result POJOs

- RebuildCollectionResultTest: full JSON, missing optionals, snake_case mapping, long values
- CompactionResultTest: nested collections, boxed Long null/present semantics
- WALPruneResultTest: full result, null optional Longs, dry_run/vacuum_requested booleans
- BackupManifestTest: full manifest, empty files, metadata fields, int/long types

* feat(06-01): implement 7 result POJOs for maintenance operations

- RebuildCollectionResult: 12 fields matching Go rebuild.go struct
- CompactionCollectionResult: boxed Long for optional pending ops
- CompactionResult: nested List<CompactionCollectionResult>
- WALPruneCollectionResult: 5 boxed Long fields for optional sequence numbers
- WALPruneResult: nested List<WALPruneCollectionResult> with dry_run/vacuum booleans
- BackupFileMetadata: path, sizeBytes, mode, sha256, modifiedAt as String
- BackupManifest: nested List<BackupFileMetadata> with int fileCount and long totalBytes

* docs(06-01): complete result POJOs plan

- SUMMARY.md documenting 7 result POJOs, JsonUtil, and 15 tests
- STATE.md advanced to plan 2 of 3, performance metrics recorded
- 